--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Martin's Aquarium</title>
+    <link rel="stylesheet" href="styles/main.css">
+    <link href="https://fonts.cdnfonts.com/css/hello-dina-script" rel="stylesheet">
+                
 </head>
 <body>
-    
+    <header>
+        <h1 id="title">Martin's Aquarium</h1>
+    </header>
+    <main>
+        <section id="container">
+            <div class="content-wrapper">
+                <div>
+                </div>
+                <aside class="careTips">Care Tips
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vehicula vitae ligula sit amet maximus. Nunc auctor neque ipsum, ac porttitor elit lobortis ac. Vivamus ultrices sodales tellus et aliquam. Pellentesque porta sit amet nulla vitae luctus. Praesent quis risus id dolor venenatis condimentum.</p>
+                </aside>
+            </div>
+        </section>
+        <div>
+            <article class="visitorTips">Visitor Tips
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vehicula vitae ligula sit amet maximus. Nunc auctor neque ipsum, ac porttitor elit lobortis ac. Vivamus ultrices sodales tellus et aliquam. Pellentesque porta sit amet nulla vitae luctus. Praesent quis risus id dolor venenatis condimentum.</p>
+            </article>
+        </div>
+        <div>
+            <article class="harvestLocations">Hervest Locations
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vehicula vitae ligula sit amet maximus. Nunc auctor neque ipsum, ac porttitor elit lobortis ac. Vivamus ultrices sodales tellus et aliquam. Pellentesque porta sit amet nulla vitae luctus. Praesent quis risus id dolor venenatis condimentum.</p>
+            </article>
+        </div>
+    </main>
+
+</body>
+<script type="module" src="./scripts/main.js"></script>
 </body>
 </html>
